Update GS java opts